--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btnDelete">DELETE</string>
     <string name="btnEdit">EDIT</string>
+    <string name="info">Info</string>
 </resources>
